--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -1,9 +1,164 @@
 .container {
-  padding: 20rpx;
-  padding-top: calc(128rpx + env(safe-area-inset-top));
-  padding-bottom: calc(48rpx + 146rpx);
+  padding: 0;
+  min-height: 100vh;
 }
 
-.mine-content {
-  color: white;
+.top-section {
+  background: var(--primary-color);
+  padding-top: calc(80rpx + env(safe-area-inset-top));
+  padding-bottom: 0rpx;
+  border-radius: 0 0 10rpx 10rpx;
+}
+
+.user-info {
+  display: flex;
+  align-items: center;
+  padding: 40rpx 48rpx;
+}
+
+.avatar {
+  width: 120rpx;
+  height: 120rpx;
+  border-radius: 60rpx;
+  margin-bottom: 0;
+  margin-right: 20rpx;
+}
+
+.user-text {
+  display: flex;
+  flex-direction: column;
+  gap: 10rpx;
+}
+
+.nickname {
+  font-size: 36rpx;
+  color: #000;
+}
+
+.user-id {
+  font-size: 24rpx;
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.function-list {
+  width: 672rpx;
+  height: 160rpx;
+  margin: -80rpx auto 0;
+  border-radius: 11.39rpx 11.39rpx 11.39rpx 11.39rpx;
+  background: rgba(255, 255, 255, 1);
+  box-shadow: 0rpx 0rpx 7.25rpx  rgba(166, 166, 166, 1);
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  transform: translateY(80rpx);
+}
+
+.function-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10rpx;
+  padding: 36rpx;
+}
+
+.function-item image {
+  width: 50rpx;
+  height: 50rpx;
+}
+
+.function-item text {
+  font-size: 24rpx;
+  color: #000;
+}
+
+.bottom-section {
+  width: 672rpx;
+  margin: 20rpx auto 0;
+  padding-bottom: calc(48rpx + 186rpx);
+}
+
+.vip-card {
+  position: relative;
+  width: 100%;
+  height: 160rpx;
+  border-radius: 20rpx;
+  overflow: hidden;
+  margin: 80rpx 0 20rpx;
+}
+
+.vip-bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+.ad-card {
+  position: relative;
+  width: 100%;
+  height: 384rpx;
+  border-radius: 20rpx;
+  overflow: hidden;
+}
+
+.ad-img {
+  width: 100%;
+  height: 100%;
+}
+
+
+.notice-section {
+  padding: 20rpx 50rpx;
+  margin: 30rpx 0;
+}
+
+.notice-item {
+  display: flex;
+  align-items: center;
+  padding: 20rpx 0;
+  border-bottom: 1rpx solid rgba(255, 255, 255, 0.1);
+}
+
+.notice-item:last-child {
+  border-bottom: none;
+}
+
+.notice-item image {
+  width: 40rpx;
+  height: 40rpx;
+  margin-right: 20rpx;
+}
+
+.notice-item text {
+  flex: 1;
+  font-size: 28rpx;
+  color: #fff;
+}
+
+.arrow {
+  width: 16rpx;
+  height: 16rpx;
+  border-top: 2rpx solid #fff;
+  border-right: 2rpx solid #fff;
+  transform: rotate(45deg);
+}
+
+.merchant-entry {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10rpx;
+  width: 100%;
+  height: 100rpx;
+  margin-top: 30rpx;
+border-radius: 36.23rpx;
+background: rgba(255, 255, 255, 1);
+}
+
+.merchant-entry image {
+  width: 40rpx;
+  height: 40rpx;
+}
+
+.merchant-entry text {
+  font-size: 32rpx;
+  color: #000;
 } 
