--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -1,70 +1,82 @@
-<view class="container theme">
-  <!-- 上半部分（主题色背景） -->
-  <view class="top-section">
-    <!-- 用户信息区域 -->
-    <view class="user-info">
-      <image class="avatar" src="/images/mine/avatar.png"></image>
-      <view class="user-text">
-        <text class="nickname">Advens</text>
-        <text class="user-id">账号：15100000000</text>
+<view class="page-wrapper">
+  <view class="container theme {{isBlur ? 'blur' : ''}}">
+    <!-- 上半部分（主题色背景） -->
+    <view class="top-section">
+      <!-- 用户信息区域 -->
+      <view class="user-info">
+        <image class="avatar" src="/images/mine/avatar.png"></image>
+        <view class="user-text">
+          <text class="nickname">Advens</text>
+          <text class="user-id">账号：15100000000</text>
+        </view>
+      </view>
+
+      <!-- 功能列表 -->
+      <view class="function-list">
+        <view class="function-item" bindtap="goToConsumption">
+          <image src="/images/mine/xiaofei.png"></image>
+          <text>消费记录</text>
+        </view>
+        <view class="function-item">
+          <image src="/images/mine/kapian.png"></image>
+          <text>我的卡包</text>
+        </view>
+        <view class="function-item" bindtap="goToMerge">
+          <image src="/images/mine/hebing.png"></image>
+          <text>合并卡片</text>
+        </view>
+        <view class="function-item" bindtap="showService">
+          <image src="/images/mine/kefu.png"></image>
+          <text>联系客服</text>
+        </view>
       </view>
     </view>
 
-    <!-- 功能列表 -->
-    <view class="function-list">
-      <view class="function-item">
-        <image src="/images/mine/xiaofei.png"></image>
-        <text>消费记录</text>
+    <!-- 下半部分 -->
+    <view class="bottom-section">
+      <!-- VIP卡片 -->
+      <view class="vip-card" bindtap="goToCards" data-from="mine">
+        <image class="vip-bg" src="/images/mine/vip.png" mode="aspectFill"></image>
       </view>
-      <view class="function-item">
-        <image src="/images/mine/kapian.png"></image>
-        <text>我的卡包</text>
+      <!-- 广告卡片 -->
+      <view class="ad-card">
+        <image class="ad-img" src="/images/mine/ad.png" mode="aspectFill"></image>
       </view>
-      <view class="function-item">
-        <image src="/images/mine/hebing.png"></image>
-        <text>合并卡片</text>
-      </view>
-      <view class="function-item">
-        <image src="/images/mine/kefu.png"></image>
-        <text>联系客服</text>
-      </view>
-    </view>
-  </view>
 
-  <!-- 下半部分 -->
-  <view class="bottom-section">
-    <!-- VIP卡片 -->
-    <view class="vip-card">
-      <image class="vip-bg" src="/images/mine/vip.png" mode="aspectFill"></image>
-    </view>
-    <!-- 广告卡片 -->
-    <view class="ad-card">
-      <image class="ad-img" src="/images/mine/ad.png" mode="aspectFill"></image>
-    </view>
+      <!-- 通知列表 -->
+      <view class="notice-section">
+        <view class="notice-item" bindtap="showNotice">
+          <image src="/images/mine/gonggao.png"></image>
+          <text>平台公告</text>
+          <view class="arrow"></view>
+        </view>
+        <view class="notice-item" bindtap="showNotice">
+          <image src="/images/mine/jiameng.png"></image>
+          <text>加盟热线</text>
+          <view class="arrow"></view>
+        </view>
+        <view class="notice-item" bindtap="goToFeedback">
+          <image src="/images/mine/fankui.png"></image>
+          <text>意见反馈</text>
+          <view class="arrow"></view>
+        </view>
+      </view>
 
-    <!-- 通知列表 -->
-    <view class="notice-section">
-      <view class="notice-item" bindtap="showNotice">
-        <image src="/images/mine/gonggao.png"></image>
-        <text>平台公告</text>
-        <view class="arrow"></view>
+      <!-- 加盟商入口 -->
+      <view class="merchant-entry">
+        <image src="/images/mine/jiamengshang.png"></image>
+        <text>加盟商入口</text>
       </view>
-      <view class="notice-item" bindtap="showNotice">
-        <image src="/images/mine/jiameng.png"></image>
-        <text>加盟热线</text>
-        <view class="arrow"></view>
-      </view>
-      <view class="notice-item" bindtap="showNotice">
-        <image src="/images/mine/fankui.png"></image>
-        <text>紧急反馈</text>
-        <view class="arrow"></view>
-      </view>
-    </view>
-
-    <!-- 加盟商入口 -->
-    <view class="merchant-entry">
-      <image src="/images/mine/jiamengshang.png"></image>
-      <text>加盟商入口</text>
     </view>
   </view>
 </view> 
+<view class="service-popup" wx:if="{{showServicePopup}}" bindtap="hideService">
+    <view class="popup-content" catchtap="stopPropagation">
+      <image class="service-icon" src="/images/kefuren.png" mode="aspectFit"/>
+      <view class="popup-title">请选择</view>
+      <view class="popup-btns">
+        <view class="service-btn" bindtap="goToStore">找门店</view>
+        <view class="service-btn outline" bindtap="callService">加盟热线</view>
+      </view>
+    </view>
+  </view>
